--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,361 +3,51 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-	<title class="maintitle">首页 - {{title}}</title>
+	<title>Error 无权访问！！！</title>
 	<link rel="icon" href="favicon.ico" type="image/ico">
-	<meta name="keywords" content="LightYear,光年,后台模板,后台管理系统,光年HTML模板">
-	<meta name="description" content="LightYear是一个基于Bootstrap v3.3.7的后台管理系统的HTML模板。">
+	<meta name="keywords">
+	<meta name="description">
 	<meta name="author" content="yinqi">
-	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
-	<link href="assets/css/materialdesignicons.min.css" rel="stylesheet">
-	<link href="assets/css/style.min.css" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/materialdesignicons.min.css" rel="stylesheet">
+	<link href="css/style.min.css" rel="stylesheet">
+	<style>
+		body{
+			background-color: #fff;
+		}
+		.error-page {
+			height: 100%;
+			position: fixed;
+			width: 100%;
+		}
+		.error-body {
+			padding-top: 5%;
+		}
+		.error-body h1 {
+			font-size: 210px;
+			font-weight: 700;
+			text-shadow: 4px 4px 0 #f5f6fa, 6px 6px 0 #33cabb;
+			line-height: 210px;
+			color: #33cabb;
+		}
+		.error-body h4 {
+			margin: 30px 0px;
+		}
+	</style>
 </head>
 
 <body>
-<div class="lyear-layout-web">
-	<div class="lyear-layout-container">
-		<!--左侧导航-->
-		<aside class="lyear-layout-sidebar">
-
-			<!-- logo -->
-			<div id="logo" class="sidebar-header">
-				<a href="index.html"><img src="assets/images/logo-sidebar.png" title="LightYear" alt="LightYear" /></a>
-			</div>
-			<div class="lyear-layout-sidebar-scroll">
-
-				<nav class="sidebar-main">
-					<ul class="nav nav-drawer">
-						<li class="nav-item active"> <a href="index.html"><i class="mdi mdi-home"></i> 后台首页</a> </li>
-					</ul>
-				</nav>
-
-				<div class="sidebar-footer">
-					<p class="copyright">Copyright &copy; 2019. <a target="_blank" href="http://lyear.itshubao.com">模板</a> All rights reserved. More Templates </p>
-				</div>
-			</div>
-
-		</aside>
-		<!--End 左侧导航-->
-
-		<!--头部信息-->
-		<header class="lyear-layout-header">
-
-			<nav class="navbar navbar-default">
-				<div class="topbar">
-
-					<div class="topbar-left">
-						<div class="lyear-aside-toggler">
-							<span class="lyear-toggler-bar"></span>
-							<span class="lyear-toggler-bar"></span>
-							<span class="lyear-toggler-bar"></span>
-						</div>
-						<span class="navbar-page-title"> 后台首页 </span>
-					</div>
-
-					<ul class="topbar-right">
-						<li class="dropdown dropdown-profile">
-							<a href="javascript:void(0)" data-toggle="dropdown">
-								<span>登录 <span class="caret"></span></span>
-							</a>
-							<ul class="dropdown-menu dropdown-menu-right">
-								<li> <a href="lyear_pages_profile.html"><i class="mdi mdi-account"></i> 个人信息</a> </li>
-								<li> <a href="lyear_pages_edit_pwd.html"><i class="mdi mdi-lock-outline"></i> 修改密码</a> </li>
-								<li> <a href="javascript:void(0)"><i class="mdi mdi-delete"></i> 清空缓存</a></li>
-								<li class="divider"></li>
-								<li> <a href="lyear_pages_login.html"><i class="mdi mdi-logout-variant"></i> 退出登录</a> </li>
-							</ul>
-						</li>
-						<!--切换主题配色-->
-						<li class="dropdown dropdown-skin">
-							<span data-toggle="dropdown" class="icon-palette"><i class="mdi mdi-palette"></i></span>
-							<ul class="dropdown-menu dropdown-menu-right" data-stopPropagation="true">
-								<li class="drop-title"><p>主题</p></li>
-								<li class="drop-skin-li clearfix">
-                  <span class="inverse">
-                    <input type="radio" name="site_theme" value="default" id="site_theme_1" checked>
-                    <label for="site_theme_1"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="site_theme" value="dark" id="site_theme_2">
-                    <label for="site_theme_2"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="site_theme" value="translucent" id="site_theme_3">
-                    <label for="site_theme_3"></label>
-                  </span>
-								</li>
-								<li class="drop-title"><p>LOGO</p></li>
-								<li class="drop-skin-li clearfix">
-                  <span class="inverse">
-                    <input type="radio" name="logo_bg" value="default" id="logo_bg_1" checked>
-                    <label for="logo_bg_1"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="logo_bg" value="color_2" id="logo_bg_2">
-                    <label for="logo_bg_2"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="logo_bg" value="color_3" id="logo_bg_3">
-                    <label for="logo_bg_3"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="logo_bg" value="color_4" id="logo_bg_4">
-                    <label for="logo_bg_4"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="logo_bg" value="color_5" id="logo_bg_5">
-                    <label for="logo_bg_5"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="logo_bg" value="color_6" id="logo_bg_6">
-                    <label for="logo_bg_6"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="logo_bg" value="color_7" id="logo_bg_7">
-                    <label for="logo_bg_7"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="logo_bg" value="color_8" id="logo_bg_8">
-                    <label for="logo_bg_8"></label>
-                  </span>
-								</li>
-								<li class="drop-title"><p>头部</p></li>
-								<li class="drop-skin-li clearfix">
-                  <span class="inverse">
-                    <input type="radio" name="header_bg" value="default" id="header_bg_1" checked>
-                    <label for="header_bg_1"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="header_bg" value="color_2" id="header_bg_2">
-                    <label for="header_bg_2"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="header_bg" value="color_3" id="header_bg_3">
-                    <label for="header_bg_3"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="header_bg" value="color_4" id="header_bg_4">
-                    <label for="header_bg_4"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="header_bg" value="color_5" id="header_bg_5">
-                    <label for="header_bg_5"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="header_bg" value="color_6" id="header_bg_6">
-                    <label for="header_bg_6"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="header_bg" value="color_7" id="header_bg_7">
-                    <label for="header_bg_7"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="header_bg" value="color_8" id="header_bg_8">
-                    <label for="header_bg_8"></label>
-                  </span>
-								</li>
-								<li class="drop-title"><p>侧边栏</p></li>
-								<li class="drop-skin-li clearfix">
-                  <span class="inverse">
-                    <input type="radio" name="sidebar_bg" value="default" id="sidebar_bg_1" checked>
-                    <label for="sidebar_bg_1"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="sidebar_bg" value="color_2" id="sidebar_bg_2">
-                    <label for="sidebar_bg_2"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="sidebar_bg" value="color_3" id="sidebar_bg_3">
-                    <label for="sidebar_bg_3"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="sidebar_bg" value="color_4" id="sidebar_bg_4">
-                    <label for="sidebar_bg_4"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="sidebar_bg" value="color_5" id="sidebar_bg_5">
-                    <label for="sidebar_bg_5"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="sidebar_bg" value="color_6" id="sidebar_bg_6">
-                    <label for="sidebar_bg_6"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="sidebar_bg" value="color_7" id="sidebar_bg_7">
-                    <label for="sidebar_bg_7"></label>
-                  </span>
-									<span>
-                    <input type="radio" name="sidebar_bg" value="color_8" id="sidebar_bg_8">
-                    <label for="sidebar_bg_8"></label>
-                  </span>
-								</li>
-							</ul>
-						</li>
-						<!--切换主题配色-->
-					</ul>
-				</div>
-			</nav>
-
-		</header>
-		<!--End 头部信息-->
-
-		<!--页面主要内容-->
-		<main class="lyear-layout-content">
-
-			<div class="innerBody container-fluid" >
-
-				<div class="row maintitle">
-					<!-- 控制台显示与输入指令 -->
-					<div class="col-lg-8 col-sm-12">
-						<div class="card">
-							<div class="card-header">
-								<h4>控制台</h4>
-								<label class="connecttest lyear-radio radio-danger m-t-10">
-									<input type="radio" checked="">
-									<span>服务器启动状态</span>
-								</label>
-							</div>
-							<div class="card-body">
-								<ul style="padding-left: 0px;">
-                              <textarea style="width: 100%;height: 255px; resize: none;" readonly>
-                                {{t1}}
-                              </textarea>
-								</ul>
-								<div class="row">
-									<div class="col-lg-6">
-										<input class="form-control " ref="cmd" type="text" id="web_site_title" name="cmd" value="" placeholder="输入想要发送的指令">
-									</div>
-									<div>
-										<button class="btn btn-success btn-w-md " onclick="" type="button" title="请等待服务器响应上一条指令! 不然可能会发生无法预知的异常!!!!" @click="sendcmd()">发送</button>
-										<button class="btn btn-success btn-w-md " onclick="" type="button" title="请勿重复启动! 不然可能会发生无法预知的异常!!!!" @click="starts()">启动</button>
-										<button class="btn btn-success btn-w-md " onclick="" type="button" title="请勿重复停止! 不然可能会发生无法预知的异常!!!!" @click="stops()">停止</button>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- cpu -->
-					<div class="col-sm-12 col-lg-4" >
-						<div class="card bg-purple">
-							<div class="card-body clearfix">
-								<div class="pull-right">
-									<p class="h6 text-white m-t-0">服务器信息</p>
-									<p class="h3 text-white m-b-0">{{systemfm}}</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-12 col-lg-4">
-						<div class="card bg-primary">
-							<div class="card-body clearfix">
-								<div class="pull-right">
-									<p class="h6 text-white m-t-0">CPU信息</p>
-									<p class="h3 text-white m-b-0">占用率: {{cpu}}</p>
-								</div>
-								<div class="pull-left"> <span class="img-avatar img-avatar-48 bg-translucent"><i class="mdi mdi-currency-cny fa-1-5x"></i></span> </div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-12 col-lg-4">
-						<div class="card bg-success">
-							<div class="card-body clearfix">
-								<div class="pull-right">
-									<p class="h6 text-white m-t-0">内存信息</p>
-									<p class="h3 text-white m-b-0">占用率: {{memory}}</p>
-								</div>
-								<div class="pull-left"> <span class="img-avatar img-avatar-48 bg-translucent"><i class="mdi mdi-arrow-down-bold fa-1-5x"></i></span> </div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row" >
-					<div class="card" style="height: 300px;">
-						<div class="card-header"><h4>服务器快速设置</h4></div>
-						<div class="fastsetting card-body" id="">
-
-							<div class="form-group col-lg-4">
-								<label for="example-input-small">spawn-protection 当前值: </label>
-								{{spawn_protection}}
-								<input class="form-control input-sm" type="text" name="example-input-small" >
-							</div>
-							<div class="form-group col-lg-4">
-								<label for="example-input-small">gamemode 当前值: </label>
-								{{gamemode}}
-								<input class="form-control input-sm" type="text" name="example-input-small" placeholder="">
-							</div>
-							<div class="form-group col-lg-4">
-								<label for="example-input-small">difficulty 当前值: </label>
-								{{difficulty}}
-								<input class="form-control input-sm" type="text"  name="example-input-small" placeholder="">
-							</div>
-							<div class="form-group col-lg-4">
-								<label for="example-input-small">level-type 当前值: </label>
-								{{level_type}}
-								<input class="form-control input-sm" type="text" name="example-input-small" placeholder="">
-							</div>
-							<div class="form-group col-lg-4">
-								<label for="example-input-small">server-port 当前值: </label>
-								{{server_port}}
-								<input class="form-control input-sm" type="text"  name="example-input-small" placeholder="">
-							</div>
-							<div class="form-group col-lg-4">
-								<label for="example-input-small">motd 当前值: </label>
-								{{motd}}
-								<input class="form-control input-sm" type="text" name="example-input-small" placeholder="">
-							</div>
-							<div class="form-group row m-b-10 col-lg-4">
-								<div class="col-xs-6">enforce-whitelist</div>
-								<div class="col-xs-6">
-									<label class="lyear-switch switch-success">
-										<input id="enforce-whitelist" type="checkbox">
-										<span></span>
-									</label>
-								</div>
-							</div>
-							<div class="form-group row m-b-10 col-lg-4">
-								<div class="col-xs-6">online-mode</div>
-								<div class="col-xs-6">
-									<label class="lyear-switch switch-success">
-										<input id="online-mode" type="checkbox">
-										<span></span>
-									</label>
-								</div>
-							</div>
-							<div class="form-group row m-b-10 col-lg-4">
-								<div class="col-xs-6">allow-flight</div>
-								<div class="col-xs-6">
-									<label class="lyear-switch switch-success">
-										<input id="allow-flight" type="checkbox">
-										<span></span>
-									</label>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- 侧面服务器信息 -->
-			</div>
-		</main>
-		<!--End 页面主要内容-->
+<section class="error-page">
+	<div class="error-box">
+		<div class="error-body text-center">
+			<h1>403</h1>
+			<h4>抱歉 您无权访问</h4>
+			<h4>可能原因: 您可能直接通过9xxx端口访问服务器 这是不被允许的!!<br>请直接联系管理员并将访问地址发送给他 wfprivate@outlook.com</h4>
+		</div>
 	</div>
-</div>
-<style>
-	.backinfo {
-		list-style-type:none;
-		font-size: 9px;
-	}
-</style>
-
-
-<script type="text/javascript" src="assets/js/jquery.min.js"></script>
-<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="assets/js/perfect-scrollbar.min.js"></script>
-<script type="text/javascript" src="assets/js/main.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<!--图表插件-->
-<script type="text/javascript" src="assets/js/Chart.js"></script>
-
-
+</section>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript">;</script>
 </body>
 </html>
