--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,8 @@
 	<div class="error-box">
 		<div class="error-body text-center">
 			<h1>MCSM !</h1>
-			<h4>程序自动为你创建管理员:admin 密码:123456</h4>
+			<h4>程序自动为你创建管理员:admin 密码:123456 </h4>
+			<h4>请及时修改密码, 如果长时间修改密码, 网站会主动清理默认管理员</h4>
 			<h4>请及时修改管理员和管理员密码!<br>如果您并不是管理员 请直接联系管理员!</h4>
 		</div>
 	</div>
